# mc_tut_ss2023

./: README.md  common.mk  tiva.ld
adc/: boot.elf  main.c
aufgabe1/: boot.elf  main.c
balbierer Aufgaben/tiva-sdk-mc-reia-main/: .gitignore  .gitmodules  README.md
balbierer Aufgaben/tiva-sdk-mc-reia-main/projects/A-1TasterRLed_c/: main.c
balbierer Aufgaben/tiva-sdk-mc-reia-main/projects/A-2BeideTasterRGBLed_c/: main.c  tm4c123gh6pm.ld
balbierer Aufgaben/tiva-sdk-mc-reia-main/projects/A-3BeideTasterRGBLed_asm/: main.s
balbierer Aufgaben/tiva-sdk-mc-reia-main/projects/A-4TasterRLedASMUP_asm/: init.s
balbierer Aufgaben/tiva-sdk-mc-reia-main/projects/A-5Interrupt_c/: gpio.c  gpio.h  main.c
balbierer Aufgaben/tiva-sdk-mc-reia-main/projects/A-8ADCPart1/: arm-none-eabi.cmake  main.c  startup_tm4c123gh6pm.s  uart.h
balbierer Aufgaben/tiva-sdk-mc-reia-main/projects/A-8ADCPart2/: main.c  uart.c
balbierer Aufgaben/tiva-sdk-mc-reia-main/projects/Array_asm/: main.s
balbierer Aufgaben/tiva-sdk-mc-reia-main/projects/Lsg-1TasterRLed_c/: main.c
balbierer Aufgaben/tiva-sdk-mc-reia-main/projects/Lsg-2BeideTasterRGBLed_c/: main.c
balbierer Aufgaben/tiva-sdk-mc-reia-main/projects/Lsg-3BeideTasterRGBLed_asm/: main.s
balbierer Aufgaben/tiva-sdk-mc-reia-main/projects/Lsg-4TasterRLedASMUP_asm/: init.s  main.s
balbierer Aufgaben/tiva-sdk-mc-reia-main/projects/Lsg-7TimerInterruptPriority/: CMakeLists.txt  definitions.h  gpiof.c  gpiof.h  main.c  timer.c  timer.h
balbierer Aufgaben/tiva-sdk-mc-reia-main/projects/Lsg-8ADC_c/: adc.c  adc.h  gpio.c  main.c
balbierer Aufgaben/tiva-sdk-mc-reia-main/projects/Lsg-9UART_c/: gpio.c  main.c  uart.c  uart.h
c_prog/: boot.elf  func.s  main.c
funcs_interrupt/: boot.elf  main.c
include/system/: init_tools.h
stack_aufgabe/: boot.elf  main.s
system/: init_tools.c  startup_tm4c.s  syscalls.c  sysclk.c
terminal/: boot.elf  funcs.s  main.c
uart/: boot.elf  main.c
unterprogramme/: boot.elf  main.s
(+16 files in other folders)
